--- a/html-css/module_01-02/style/main.css
+++ b/html-css/module_01-02/style/main.css
@@ -5,7 +5,7 @@ body{
 }
 
 h2 {
-  font-size: 22px;
+  font-size: 30px;
 }
 
 h3 {
@@ -14,7 +14,11 @@ h3 {
 }
 
 p {
-  font-size: 12px;
+  font-size: 12pt;
+}
+
+a {
+  font-size: 14pt;
 }
 
 .nav_bar{
