--- a/html-css/module_03/style/main.css
+++ b/html-css/module_03/style/main.css
@@ -84,16 +84,18 @@ img {
   vertical-align: middle;
   margin: 0;
   padding: 0;
+  font-size: 0;/*Убераю зазор списка*/
 }
 
 .card {
   display: inline-block;
   width: 400px;
   margin-bottom: 130px;
-  margin-right: 96px;
+  margin-right: 100px;
   padding: 10px;
 }
 
+/*Все елементі кроме 2рых*/
 .card:nth-child(2n){
   margin-right: 0px;
 }
