--- a/html-css/module_04/style/main.css
+++ b/html-css/module_04/style/main.css
@@ -14,6 +14,11 @@ html {
      box-sizing: inherit;
 }
 
+a{
+  text-decoration: none;
+  color: #2f2323;
+}
+
 .container {
     width: 1110px;
     margin: 0 auto;
@@ -21,39 +26,44 @@ html {
 
 /*--Меню сайта--*/
 header{
-    vertical-align: middle;
     font-family: 'Roboto', sans-serif;
     color: #2f2323;
+    padding: 38px 0 105px;
+}
+
+.nav_bar{
+  background-color: lightblue;
+  overflow: hidden;
 }
 
 /* Логотип */
 .logo{
-    display: inline-block;
+    float: left;
     font-size: 30pt;
+    color: #555252;
+    font-weight: 300;
+    background-color: blanchedalmond;
 }
 
-.text_logo{
-    margin: 0;
-}
-
-.text_logo::before{
+.logo::before{
     content: "M";
     font-family: 'Roboto', sans-serif;
     color: #1abc9c;
     font-weight: 700;
 }
+
 /* Меню */
-nav{
-    display: inline-block;
-    float: right;
-}
 .menu{
-    margin: 0;
-    padding: 0;
+    float: right;
 }
   
   .menu li {
     display: inline-block;
+    margin-right: 36px;
+  }
+
+  .menu li:last-child{
+    margin-right: 0;
   }
   
   .section_menu{
@@ -68,3 +78,43 @@ nav{
   .section_menu:hover{
     color: #1abc9c;
   }
+
+  /* ---Центральная часть сайта--- */
+/* Карточки продаж */
+.headline{
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 28pt;
+  font-family: 'Roboto', sans-serif; 
+  font-weight: 900;
+  color: #515151;
+  margin-bottom: 132px; 
+}
+
+.headline::after{
+  display: block;
+  margin: auto;
+  content: "";
+  height: 7px;
+  width: 160px;
+  margin-top: 32px;
+  background-color: #1abc9c;
+}
+
+.featured_list{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+}
+
+.featured_item{
+  display: inline-block;
+  width: 255px;
+  margin-right: 30px;
+  font-size: 14px;
+}
+
+.featured_item:nth-child(4n){
+  margin-right: 0;
+}
