--- a/html-css/module_04/style/main.css
+++ b/html-css/module_04/style/main.css
@@ -14,6 +14,10 @@ html {
      box-sizing: inherit;
 }
 
+body{
+  margin: 0;
+}
+
 a{
   text-decoration: none;
   color: #2f2323;
@@ -28,21 +32,21 @@ a{
 header{
     font-family: 'Roboto', sans-serif;
     color: #2f2323;
-    padding: 38px 0 105px;
 }
 
 .nav_bar{
-  background-color: lightblue;
+  /* background-color: lightblue; */
   overflow: hidden;
+  padding: 38px 0 56px;
 }
 
 /* Логотип */
 .logo{
-    float: left;
     font-size: 30pt;
     color: #555252;
     font-weight: 300;
-    background-color: blanchedalmond;
+    /* background-color: blanchedalmond; */
+    vertical-align: middle
 }
 
 .logo::before{
@@ -54,32 +58,35 @@ header{
 
 /* Меню */
 .menu{
-    float: right;
+    display: inline-block;
+    width: 992px;
+    text-align: right;
 }
   
-  .menu li {
-    display: inline-block;
-    margin-right: 36px;
-  }
+.menu li {
+  display: inline-block;
+  margin-right: 36px;
+}
 
-  .menu li:last-child{
-    margin-right: 0;
-  }
+.menu li:last-child{
+  margin-right: 0;
+}
   
-  .section_menu{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 10pt;
-    color: #0f0101;
-  }
+.section_menu{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 14pt;
+  color: #0f0101;
+}
 
-  .section_menu:hover{
-    color: #1abc9c;
-  }
+.section_menu:hover,
+.section_menu:focus{
+  color: #1abc9c;
+}
 
-  /* ---Центральная часть сайта--- */
+/* ---Центральная часть сайта--- */
 /* Карточки продаж */
 .headline{
   text-align: center;
@@ -88,7 +95,7 @@ header{
   font-family: 'Roboto', sans-serif; 
   font-weight: 900;
   color: #515151;
-  margin-bottom: 132px; 
+  margin-bottom: 82px; 
 }
 
 .headline::after{
@@ -111,10 +118,41 @@ header{
 .featured_item{
   display: inline-block;
   width: 255px;
+  height: 322px;
   margin-right: 30px;
-  font-size: 14px;
+  margin-bottom: 30px;
+  background-color: #323232;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14pt;
+  font-weight: 900;
+  color: azure;
+  text-transform: uppercase; 
+}
+
+.featured_item:hover {
+  background-color: #1abc9c;
 }
 
 .featured_item:nth-child(4n){
   margin-right: 0;
+}
+
+.slide_text {
+  display: inline-block;
+  color: azure;
+  padding-left: 10px;
+  width: 196px;
+}
+
+.slide_cost{
+  display: inline;
+  margin: 0;
+  padding: 7px;
+  text-align: right;
+  background: rgba(214, 214, 214, 0.6);
+}
+
+/* Карточки новостей */
+.lastes-news{
+  margin-top:106px;
 }
