--- a/html-css/module_04/style/main.css
+++ b/html-css/module_04/style/main.css
@@ -156,3 +156,20 @@ header{
 .lastes-news{
   margin-top:106px;
 }
+
+.news_list {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+  padding: 0;
+  font-size: 0;/*Убераю зазор списка*/
+}
+
+.news_items {
+  display: inline-block;
+  width: 400px;
+  margin-bottom: 130px;
+  margin-right: 100px;
+  padding: 10px;
+  transition: box-shadow 0.4s;
+}
