--- a/html-css/module_03/style/main.css
+++ b/html-css/module_03/style/main.css
@@ -21,6 +21,7 @@ body {
 .container {
   width: 900px;
   margin: 0 auto;
+  text-align: center;
 }
 
 h2 {
@@ -82,6 +83,7 @@ img {
 .card_menu {
   display: inline-block;
   vertical-align: middle;
+  text-align: left;
   margin: 0;
   padding: 0;
   font-size: 0;/*Убераю зазор списка*/
@@ -94,6 +96,11 @@ img {
   margin-right: 100px;
   padding: 10px;
   transition: box-shadow 0.4s;
+}
+
+.card_img{
+  width: 380px;
+  height: auto;
 }
 
 /*Все елементі кроме 2рых*/
@@ -109,18 +116,12 @@ img {
   font-family: 'Ubuntu', sans-serif;
 }
 
-/*Футтер сайта*/
-.footer{
-  margin-top: -60px;
-  padding-bottom: 20px;
-  text-align: center;
-}
-
-.footer_btn {
+.btn {
   display: inline-block;
   height: 60px;
   width: 160px;
   padding: 0px; /*обнуляю дефолтный паддинг*/
+  margin-bottom: 70px;
   background-color: white;
   border-width: 1px;
   border-color: #626262;
@@ -129,7 +130,7 @@ img {
   transition: color 0.3s, background-color 0.3s;
 }
 
-.footer_btn:hover{
+.btn:hover{
   color: white;
   background-color: #626262;
 }
