--- a/html-css/module_01-02/style/main.css
+++ b/html-css/module_01-02/style/main.css
@@ -1,73 +1,142 @@
-body{
-  with: 100%;
-  hight: 100%;
-  background: #ffffff;
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
+
+/*Верстка через border-box*/
+html {
+box-sizing: border-box;
+font-family: 'Playfair Display', serif;
+color: #626262;
+}
+
+*, *::before, *::after {
+box-sizing: inherit;
+}
+
+
+
+body {
+margin: 0;  /*обнуляю дефолтный margin*/
+}
+
+.container {
+width: 900px;
+margin: 0 auto;
+text-align: center;
 }
 
 h2 {
-  font-size: 30px;
+font-size: 20pt;
 }
 
 h3 {
-  text-transform: uppercase;
-  font-size: 11px;
-}
-
-p {
-  font-size: 12pt;
+text-transform: uppercase;
+font-size: 14px;
+font-weight: 100;
+color: #b4ad9e;
 }
 
 a {
-  font-size: 14pt;
+text-transform: uppercase;
+text-decoration: none;
+font-size: 14pt;
+transition: color 0.3s;
+color: black;
 }
 
-.nav_bar{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 900px;
+a:hover,
+a:focus {
+color: #03a9f4;
 }
 
-.menu {
-  list-style-type: none;
-  display: flex;
-  justify-content: space-between;
-  padding: 100px 150px;
+p {
+font-size: 14px;
 }
 
-.section__menu{
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #000;
+img { 
+display: block;
+max-width: 100%;
+height: auto;
 }
 
-.section__menu:active {
-  color: #03a9f4;
+/*Меню сайта*/
+.nav_bar {
+padding: 78px 0px 100px 0px;
+text-align: center;
 }
 
-.section__menu:hover{
-  color: #03a9f4;
+.menu{
+display: inline-block;
+vertical-align: middle;
+margin: 0;
+padding: 0;
 }
 
-.card_section{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 900px;
+.menu li {
+display: inline-block;
 }
 
-.card_row{
-  display: flex;
-  justify-content: space-between;
+.menu li:not(:last-child){
+margin-right: 120px;
 }
 
-.card{
-  width: 400px;
-  padding-bottom: 120px;
+/*Карточки*/
+.card_menu {
+display: inline-block;
+vertical-align: middle;
+text-align: left;
+margin: 0;
+padding: 0;
+font-size: 0;/*Убераю зазор списка*/
+}
+
+.card_menu li{
+  display: inline-block;
+  margin-bottom: 130px;
+  margin-right: 100px;
+}
+
+/*Все елементы кроме 2рых*/
+.card_menu li:nth-child(2n){
+  margin-right: 0px;
+}  
+
+.card {
+width: 400px;
+padding: 10px;
+transition: box-shadow 0.4s;
 }
 
 .card_img{
-  width: inherit;
+width: 380px;
+height: auto;
+}
+
+
+.card:hover{
+box-shadow: 0 0 7px rgba(0,0,0,0.5);
+}
+
+.card_img_name {
+font-family: 'Ubuntu', sans-serif;
+}
+
+.btn {
+display: inline-block;
+height: 60px;
+width: 160px;
+padding: 0px; /*обнуляю дефолтный паддинг*/
+margin-bottom: 70px;
+background-color: white;
+border-width: 1px;
+border-color: #626262;
+font-family: 'Playfair Display', serif;
+font-size: 15px;
+transition: color 0.3s, background-color 0.3s;
+}
+
+.btn:hover{
+color: white;
+background-color: #626262;
 }
 
 .footer_btn{
@@ -81,6 +150,6 @@ a {
 }
 
 footer{
-  background-color: gray;
+  background-color: lightgray;
   padding: 30px 0;
 }
