--- a/html-css/module_06/style/main.css
+++ b/html-css/module_06/style/main.css
@@ -153,6 +153,12 @@ header{
     background-color: var(--color-pink);
 }
 
+
+/* тело сайта */
+main{
+    padding-bottom: 80px;
+}
+
 /* Карточки Amazing Services */
 .card_list{
     display: flex;
@@ -245,4 +251,10 @@ header{
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 300;
+}
+
+/* футер сайта */
+footer{
+    height: 63px;
+    border-top: 1px solid var(--text-color-gray);
 }
