--- a/html-css/module_05/style/main.css
+++ b/html-css/module_05/style/main.css
@@ -27,6 +27,7 @@ p{
 }
 
 a{
+    display: inline-block;
     text-decoration: none;
     color: #2f2323;
   }
@@ -83,17 +84,17 @@ header{
 
 /* Логотип */
 .logo{
+    display: inline-block;
     font-size: 30pt;
     color: #555252;
     font-weight: 300;
     vertical-align: middle
 }
 
-.logo::before{
-    content: "M";
-    font-family: 'Roboto', sans-serif;
-    color: #1abc9c;
-    font-weight: 700;
+.logo:first-letter {
+  font-family: 'Roboto', sans-serif;
+  color: #1abc9c;
+  font-weight: 700;
 }
 
 /* Меню */
@@ -130,7 +131,6 @@ header{
 }
 
 /* Слайдер */
-
 .slider{
     height: 600px;
     background-color: #555252;
@@ -183,11 +183,11 @@ header{
     opacity: .4;
 }
 
-.slides-txt{
+.slides_txt_wrapper{
     position: absolute;
     top:50%;
     left: 50%;
-    transform: translate(-50%, -70%);
+    transform: translate(-50%, -50%);
     color: white;
 }
 
@@ -195,17 +195,20 @@ header{
     font-family: 'Roboto', sans-serif;
     font-size: 45px;
     font-weight: 900;
-    line-height: 36px;
+    margin: 0;
 }
 
 .slides_text{
     font-family: 'Roboto', sans-serif;
     font-size: 17px;
     font-weight: 300;
-    line-height: 0;
 }
 
 /* Карточки */
+.new_colection{
+    padding-bottom: 100px;
+}
+
 .card_main{
     list-style-type: none;
     margin: 0;
@@ -281,12 +284,13 @@ header{
     margin-top: 80px;
     margin-left: 35px;
     list-style: none;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .card_modal li{
     text-align: center;
     margin-right: 8px;
+    margin-bottom: 6px;
 }
 
 .card_modal li:nth-child(3n),
@@ -298,10 +302,9 @@ header{
     display: inline-block;
     width: 50px;
     height: 50px;
-    padding-top: 9px;
     border: 1px solid white;
     color: white;
-    margin-bottom: 6px;
+    background-color: rgba(0, 0, 0, 0);
     font-size: 25px;
 }
 
@@ -325,7 +328,6 @@ header{
 /* Футтер сайта */
 
 .foot{
-    margin-top: 100px;
     height: 90px;
     background-color: #323232;
     text-align: center;
