--- a/html-css/module_06/style/main.css
+++ b/html-css/module_06/style/main.css
@@ -55,18 +55,11 @@ img {
     margin: 0 auto;
 }
 
-.clearfix::after{
-    display: table;
-    content: '';
-    clear: both;
-}
-
 /* Заголовки секций сайта */
 .headline{
     display: block;
     text-align: center;
     color: var(--text-color-darkgray);
-    /* padding-top: 100px; */
     padding-bottom: 41px;
 }
 
@@ -233,7 +226,7 @@ main{
 
 .team_items:hover>.team_modal{
     /* display: block; */
-    opacity: 1;
+    opacity: 1; /*Использовал opacity так как несрабатывал transition*/
     transform: translate(-10px, -10px);
 }
 
@@ -245,7 +238,7 @@ main{
 /* Модальное окно */
 .team_modal{
     /* display: none; */
-    opacity: 0;
+    opacity: 0; /*Использовал opacity так как несрабатывал transition*/
     position: absolute;
     width: 380px;
     height: 470px;
