--- a/html-css/module_06/style/main.css
+++ b/html-css/module_06/style/main.css
@@ -50,6 +50,10 @@ img {
     height: auto;
 }
 
+h1,h2,h3,h4{
+    margin: 0;
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -67,12 +71,15 @@ img {
     font-family: 'Kaushan Script', cursive;
     font-size: 24px;
     font-weight: 300;
+    padding-bottom: 10px;
 }
 
 .headline_second{
     font-family: 'Montserrat', sans-serif;
     font-size: 30px;
     font-weight: 700;
+    text-transform: uppercase;
+    padding-bottom: 27px;
 }
   
 .headline_second::after{
@@ -89,6 +96,7 @@ img {
     display: inline-block;
     width: 940px;
     color: #999999;
+    margin-bottom: 55px;
 }
 
 /* Шапка сайта */
