--- a/html-css/module_06/style/main.css
+++ b/html-css/module_06/style/main.css
@@ -186,11 +186,12 @@ main{
     /* height: 66px; */
 }
 
-.card_img{
+.card_icon{
     display: inline-block;
-    width: 30px;
-    height: 30px;
-    margin: 0 20px 30px;
+    width: 60px;
+    height: 60px;
+    background-repeat:no-repeat;
+    background-position:top center;
 }
 
 .card_container{
