--- a/html-css/module_07/style/main.css
+++ b/html-css/module_07/style/main.css
@@ -5,19 +5,29 @@
     font-style: normal;
     font-weight: 400;
     src: local('Montserrat Regular'), local('Montserrat-Regular'),
-         url('../fonts/montserrat-v14-latin/montserrat-v14-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/montserrat-v14-latin/montserrat-v14-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
+            url('../fonts/montserrat-v14-latin/montserrat-v14-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+            url('../fonts/montserrat-v14-latin/montserrat-v14-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+ 
+/* montserrat-600 - latin */
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    src: local('Montserrat SemiBold'), local('Montserrat-SemiBold'),
+            url('../fonts/montserrat-v14-latin/montserrat-v14-latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+            url('../fonts/montserrat-v14-latin/montserrat-v14-latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
   
   /* montserrat-800 - latin */
-  @font-face {
+@font-face {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 800;
     src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'),
-         url('../fonts/montserrat-v14-latin/montserrat-v14-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/montserrat-v14-latin/montserrat-v14-latin-800.woff') format('woff'); /* Modern Browsers */
-  }
+            url('../fonts/montserrat-v14-latin/montserrat-v14-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
+            url('../fonts/montserrat-v14-latin/montserrat-v14-latin-800.woff') format('woff'); /* Modern Browsers */
+}
   
   /* roboto-slab-regular - latin */
 @font-face {
@@ -27,21 +37,30 @@
     src: local('Roboto Slab Regular'), local('RobotoSlab-Regular'),
          url('../fonts/roboto-slab-v9-latin/roboto-slab-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
          url('../fonts/roboto-slab-v9-latin/roboto-slab-v9-latin-regular.woff') format('woff'); /* Modern Browsers */
-        }
-  /* font-family: 'Rochester', cursive; */
+}
+
     /* Rochester */
 @font-face {
     font-family: 'Rochester';
     font-style: cursive;
     font-weight: 400;
-    src: local('Rochester'), local('Rochester'),
-         url('../fonts/Rochester/Rochester-Regular.ttf') format('truetype');
-  }
-  
+    src:url('../fonts/Rochester/Rochester-Regular.ttf') format('truetype');
+}
+
+    /* Rochester */
+    @font-face {
+        font-family: 'ArefRuqaa';
+        font-style: normal;
+        font-weight: 400;
+        src: url('../fonts/Aref_Ruqaa/ArefRuqaa-Regular.ttf') format('truetype');
+    }
 
 :root{
     --color-yellow: #fed136;
     --text-color-black: #222222;
+    --text-color-gray: #777777;
+    --text-color-lightgray: #bbbbbb;
+    --text-color-white: #ffffff;
 }
 
 html{
@@ -56,7 +75,6 @@ html{
 
 body{
     margin: 0;
-    color: #999999;
 }
 
 p{
@@ -65,8 +83,8 @@ p{
 }
 
 a{
+    display: block;
     text-decoration: none;
-    color: #2f2323;
     cursor: pointer;
 }
 
@@ -81,26 +99,209 @@ h1,h2,h3,h4{
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 940px;
     margin: 0 auto;
 }
 
-/* Шапка сайта */
-p{
-    font-size: 30px;
+/* Заголовоки общий блок */
+.headline{
+    display: block;
+    text-align: center;
+    color: var(--text-color-darkgray);
+    padding-bottom: 41px;
 }
-.test{
-    font-family: 'Rochester', cursive;
-    font-style: oblique;
-}
-.test1{
+
+.headline_first{
     font-family: 'Montserrat', normal;
     font-weight: 800;
+    font-size: 39px;
+    text-transform: uppercase;
+    margin-bottom: 7px;
 }
-.test2{
-    font-family: 'Montserrat', normal;
+
+.headline_second{
+    font-family: 'Aref Ruqaa', serif;
     font-weight: 400;
+    font-size: 18px;
+    font-style: oblique;
+    color: var(--text-color-gray);
 }
-.test3{
+
+/* Шапка сайта */
+.main_head{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 30px;
+    padding-bottom: 120px;
+}
+
+/* Логотип */
+.logo{
+    font-family: 'Rochester', cursive;
+    font-style: oblique;
+    font-size: 35px;
+    color: var(--color-yellow);
+}
+/* Навигация шапки сайта */
+.nav_menu{
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 6px;
+}
+
+.nav_list{
+    display: flex;
+    justify-content: space-between;
+    width: 480px;
+    list-style: none;  
+    margin: 0;/*Убираем отступы у списка*/
+    padding: 0;/*Убираем отступы у списка*/
+}
+
+.nav_link{
+    text-transform: uppercase;
+    font-family: 'Montserrat', normal;
+    font-weight: 600;
+    font-size: 12px;
+    color: var(--text-color-black);
+}
+
+.nav_link:hover{
+    color: var(--color-yellow);
+}
+
+/* Карточки сайта */
+.first_section {
+    padding-bottom: 92px;
+}
+
+.card_list{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.card_item{
+    height: 230px;
+    width: 290px;
+}
+
+.card_icon{
+    height: 115px;
+    background-repeat:no-repeat;
+    background-position:center;
+}
+
+.card_text{
+    text-align: center;
+}
+
+.card_text>h4{
+    font-family: 'Montserrat', normal;
+    font-weight: 800;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.card_text>p{
     font-family: 'Roboto', normal;
+    font-size: 16px;
+    color: var(--text-color-gray);
 }
+
+/* Секция контакты */
+.second_section{
+    height: 680px;
+    padding-top: 100px;
+    background: #222222 url(../img/map.jpg) no-repeat bottom;
+    background-size: contain;
+}
+
+.headline_first_s_s{
+    color: var(--text-color-white);
+}
+
+form{ 
+    text-align: center;
+    height: 220px;
+}
+
+.form_wrapper{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.input_group{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+textarea[name="Message"]{
+    display: block;
+    width: 455px;
+    height: 220px;
+    background-color: var(--text-color-white);
+    border-radius: 3px;
+    font-family: 'Montserrat', normal;
+    font-weight: 600;
+    font-size: 16px;
+    color: var(--text-color-lightgray);
+    padding-left: 20px;
+    padding-top: 12px;
+}
+
+textarea:invalid {
+    outline: 2px solid#fdd;
+}
+textarea:valid {
+    outline: 2px solid#dfd;
+}
+
+input:not([type="submit"]){
+    display: block;
+    width: 455px;
+    height: 50px;
+    border: 1px solid var(--text-color-lightgray);
+    border-radius: 3px;
+    font-family: 'Montserrat', normal;
+    font-weight: 600;
+    font-size: 16px;
+    color: var(--text-color-lightgray);
+    padding-left: 20px;
+}
+
+input[name="Name"]:invalid,
+input[name="email"]:invalid,
+textarea[name="Message"]:invalid{
+    outline: 2px solid rgb(218, 93, 93);
+}
+
+input[name="Name"]:valid,
+input[name="email"]:valid,
+textarea[name="Message"]:valid{
+    outline: 2px solid rgb(74, 241, 74);
+}
+
+input[type="submit"]{
+    display: inline-block;
+    width: 240px;
+    height: 65px;
+    border: none;
+    border-radius: 3px;
+    background-color: var(--color-yellow);
+    font-family: 'Montserrat', normal;
+    font-weight: 600;
+    color: var(--text-color-white);
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+
+
+
+
+  
