--- a/html-css/module_07_add_task/style/main.css
+++ b/html-css/module_07_add_task/style/main.css
@@ -40,7 +40,7 @@ table{
 }
 
 th{
-    border: 1px solid var(--table-color);;
+    border: 1px solid var(--table-color);
     background-color: var(--table-color);
     font-size: 18px;
     text-transform: none;
