--- a/html-css/module_08_add_task/style/main.css
+++ b/html-css/module_08_add_task/style/main.css
@@ -1,3 +1,7 @@
+:root{
+    --material-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
 html{
     box-sizing: border-box;
 }
@@ -34,12 +38,181 @@ h1,h2,h3,h4{
 }
 
 .container {
-    max-width: 940px;
+    max-width: 960px;
     margin: 0 auto;
+    margin-bottom: 50px;
 }
 
-/* Боди сайта */
 
-div:first-child{
+/* Первый responsive block */
+.first_block{
+    margin-top: 30px;
+    box-shadow: var(--material-box-shadow);
+}
+
+.wrapper{
+    width: 100%;
+    height: 40px;
+    border: 1px solid;
+    text-align: center;
+    padding: 8px 0;
+}
+
+.first_head{
+    background-color: yellow;
+}
+
+.first_main{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0 10px;
+}
+
+.block{
+    height: 250px;
+    border: 1px solid;
+    text-align: center;
+    /* Если выставлять padding`и в процентах получается адская ересь
+    padding: 10.417% 0; */
+    padding: 100px 0;
+}
+
+.block:nth-child(1){
+    background-color: cornflowerblue;
+    width: 54.17%;
+}
+
+.block:nth-child(2){
+    background-color: gray;
+    width: 20.83%;
+}
+
+.block:nth-child(3){
+    background-color: orange;
+    width: 20.83%;
+}
+
+.first_footer{
+    background-color: green;
+}
+
+/* Второй adaptive block */
+.second_block{
+    display: none;
+    width: 100%;
+    height: 220px;
+    box-shadow: var(--material-box-shadow);
     font-size: 25px;
 }
+
+@media (min-width: 480px){
+    .second_block{
+        display: flex;
+        flex-direction:	column;
+        justify-content: space-between;
+    }
+
+    .content{
+        height: 50%;
+        padding: 40px;
+        background-color: rgb(223, 223, 122);
+        text-align: center;
+    }
+
+    .sidebar{
+        height: 50%;
+        padding: 40px;
+        background-color: rgb(157, 211, 71);
+        text-align: center;
+    }
+}
+
+@media (min-width: 768px){
+    .second_block{
+        flex-direction:	row;
+    }
+
+    .content{
+        height: 100%;
+        flex-grow: 3;
+    }
+
+    .sidebar{
+        height: 100%;
+        flex-grow: 1;
+    }
+}
+
+/* Третий adaptive block */
+
+.third_block{
+    display: none;
+    height: 500px;
+    padding: 10px;
+    margin-bottom: 30px;
+    font-size: 25px;
+    box-shadow: var(--material-box-shadow);
+}
+
+@media (min-width: 480px){
+    .third_block{
+        display: block;
+    }
+
+    .t_header{
+        height: 38%;
+        background-color: #f55e4a;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .content_wrapper{
+        height: 60%;
+        display: flex;
+        flex-direction:	column;
+    }
+
+    .t_content{
+        height: 58%;
+        background-color: rgb(83, 155, 54);
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .t_sidebar{
+        height: 40%;
+        background-color: rgb(29, 94, 199);
+        text-align: center;
+    }
+}
+
+@media (min-width: 768px){
+    .t_header{
+        height: 37%;
+        background-color: #f55e4a;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .content_wrapper{
+        height: 60%;
+        display: flex;
+        justify-content: space-between;
+        flex-direction:	row;
+    }
+
+    .t_content{
+        height: 100%;
+        width: 20%;
+        background-color: rgb(83, 155, 54);
+        text-align: center;
+    }
+
+    .t_sidebar{
+        height: 100%;
+        width: 79%;
+        background-color: rgb(29, 94, 199);
+        text-align: center;
+    }
+}
+
